# smart_agent

./: .gitignore  DEPLOYMENT_GUIDE.md  FINAL_GITHUB_SOLUTION.md  LICENSE  README.md  app.py  codebase_smart_expense_agent.md  pyproject.toml  replit.md  requirements.txt
utils/: __init__.py  db.py  document_processor.py  llm.py
